test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/scalar_expressions/void_if_condition.plx
pub fn main(none) i32 {
    x: i32 = 10

    #  void expressions are non-scalar, so they can't be used as controlling conditions
    if cast<none>(x) {
        return nil
    }
    return true
}
